--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>Mini gra QR – etap 6</title>
+  <title>Mini gra QR – etap 7</title>
   <script src="https://unpkg.com/html5-qrcode"></script>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<h1>Mini gra QR – etap 6</h1>
+<h1>Mini gra QR – etap 7</h1>
 
 <div id="screen-init">
   <p>Zeskanowałeś kod startowy.</p>
@@ -92,11 +92,14 @@
   }
 
   function pickNextTarget() {
-    const available = CODES.filter(c => c !== lastTarget);
+    // filtrujemy, aby nowy kod nie był taki sam jak obecny
+    const available = CODES.filter(c => c !== currentTarget);
     const next = available[Math.floor(Math.random() * available.length)];
-    lastTarget = next;
+
+    lastTarget = currentTarget;
     currentTarget = next;
     previousTargets.push(currentTarget);
+
     targetInfo.innerText = `Zeskanuj kod: ${currentTarget}`;
     status.innerText = "";
     updateHistoryView();
